# MolSim

./: .clang-format  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  InputFileFormats.md  Makefile  Makefile.txt  README.md  eingabe-sonne.txt
benchmarks/: 2DParticleRect.cpp  CMakeLists.txt
benchmarks/2DParticleRect/: 2DParticleRect.cpp  TestExecution.csv
src/: Body.h  CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  CuboidGenerator.cpp  CuboidGenerator.h  FileReader.cpp  FileReader.h  ForceCalculation.h  ForceCalculations.h  ForceSource.h  Formulaes.cpp  Formulaes.h  Formulas.cpp  Formulas.h  GravityCalculation.cpp  GravityCalculation.h  GravityCalculator.cpp  GravityCalculator.h  Logger.cpp  Logger.h  Model.cpp  Model.h  MolSim.cpp  MolSim.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  benchmark.cpp  benchmark.h  defaults.h  invsqrt.cpp  invsqrt.h
src/cells/: Cell.cpp  Cell.h
src/containers/: DirectSumContainer.h  LinkedCellsContainer.cpp  LinkedCellsContainer.h  ParticleContainer.h
src/data/: Body.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/inputHandling/: Checkpointer.cpp  Checkpointer.h  CuboidGeneration.cpp  CuboidGeneration.h  CuboidGenerator.h  FileReader.cpp  FileReader.h  SphereGeneration.cpp  SphereGeneration.h
src/inputReader/: CuboidInputReader.cpp  CuboidInputReader.h  FileReader.cpp  FileReader.h  InputFacade.cpp  InputFacade.h  InputReader.cpp  InputReader.h  SphereInputReader.cpp  SphereInputReader.h  XMLInputReader.cpp  XMLInputReader.h
src/integration/: IntegrationFunctor.h  VerletFunctor.cpp  VerletFunctor.h
src/io/: ArgsParser.cpp  BodyReader.cpp  BodyReader.h  BodyReader_secondAttempt.cpp  BodyReader_secondAttempt.h  FileReader.cpp  FileReader.h  IOWrapper.cpp  IOWrapper.h  InputLoader.h  Logging.cpp  Logging.h
src/model/: Cuboid.cpp  Cuboid.h  DirectSumParticleContainer.cpp  DirectSumParticleContainer.h  LinkedCellParticleContainer.cpp  LinkedCellParticleContainer.h  Particle.cpp  Particle.h  ParticleCell.cpp  ParticleCell.h  ParticleContainer.cpp  ParticleContainer.h  ProgramParameters.cpp  ProgramParameters.h  Sphere.cpp  Sphere.h
src/models/: BoundaryBehavior.cpp  BoundaryBehavior.h  LinkedCellParticleContainer.cpp  LinkedCellParticleContainer.h  Model.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/objects/: Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/outputWriter/: CheckpointWriter.cpp  CheckpointWriter.h  OutputFacade.cpp  OutputFacade.h  VTKWriter.cpp  VTKWriter.h  Writer.cpp  Writer.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp  vtk-unstructured.h
src/particleModel/: Model.cpp  Model.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/particles/: Cell.h  LinkedCellsParticleContainer.cpp  LinkedCellsParticleContainer.h  Particle.cpp  Particle.h  ParticleArray.h  ParticleContainer.cpp  ParticleContainer.h  ParticleContainerInterface.h
src/physics/: ForceSource.h  GravitationalForce.cpp  GravitationalForce.h  GravityCalculation.cpp  GravityCalculation.h  LennardJonesForce.cpp  LennardJonesForce.h
src/sim/: Simulation.h
src/simulation/: ForceCalculation.cpp  ForceCalculation.h  GravitationalForce.cpp  GravitationalForce.h  GravitySimulation.cpp  GravitySimulation.h  InterParticleForce.cpp  InterParticleForce.h  InterParticleGravitationalForce.cpp  InterParticleGravitationalForce.h  LennardJonesForce.cpp  LennardJonesForce.h  LennardJonesSimulation.cpp  LennardJonesSimulation.h  Simulation.cpp  Simulation.h  SimulationOverview.h  SimulationParams.cpp  SimulationParams.h  SingleParticleForce.cpp  SingleParticleForce.h  SingleParticleGravitationalForce.cpp  SingleParticleGravitationalForce.h  Thermostat.cpp  Thermostat.h
src/types/: Particle.cpp  ParticleContainer.cpp  ParticleContainer.h
src/utils/: ArgsParser.cpp  ArgsParser.h  ArrayUtils.h  File.h  ForceCalculations.cpp  ForceCalculations.h  FormatTime.cpp  FormatTime.h  Generator.cpp  Generator.h  Input.h  Logger.h  MaxwellBoltzmannDistribution.cpp  MaxwellBoltzmannDistribution.h  PContainer.h  ParticleGenerator.h  ProgressBar.h  Thermostat.cpp  Thermostat.h  Vector.h
src/xsd/: Simulation.cxx  Simulation.hxx  Simulation.xsd  SimulationState.cxx  SimulationState.hxx  SimulationState.xsd
tests/: CMakeLists.txt  Checkpoints_test.cc  CuboidInputReader_test.cc  DirectSumParticleContainer_test.cc  GeneratorTest.cpp  GetNeighbours_test.cc  LennardJonesForce_test.cc  LinkedCellParticleContainerBehavioralTest.cpp  LinkedCellParticleContainerStructuralTest.cpp  LinkedCellParticleContainer_test.cc  ParticleCell_test.cc  ParticleContainerTest.cpp  ParticleContainer_test.cc  ParticleTest.cpp  SigmaEpsilon_test.cc  Simulation.xml  SimulationState.xml  SimulationTest.cpp  SingleParticleGravitationalForce_test.cc  SphereInputReader_test.cc  TestBodyReader.cpp  TestBoundsHandler.cpp  TestCells.cpp  TestConfiguration.cpp  TestCuboidSpawner.cpp  TestEnv.cpp  TestEnv.h  TestFLennardJonesCells.cpp  TestParticleContainer.cpp  TestParticleGenerator.cpp  TestSimulation.cpp  TestThermostat.cpp  TestXMLReader.cpp  Thermostat_test.cc  XMLInputReader_test.cc  eingabe-cuboid.txt  eingabe-sphere-off-zero.txt  eingabe-sphere.txt  footest.cpp  hello_test.cc  (+2 more)
tests/XML_test_files/: XMLFormat.xsd  lennardJonesDefault.xml  lennardJonesSigEps.xml  logLevelSets.xml  outputPathAndFilename.xml  posAndVelCalcInvalidValues.xml  setVelCalc.xml  tooFewVectorElements.xml
tests/data/: .gitignore  CubExample.cub  FileLoader.h  overflow.xml  test_collision.xml  wrong_input1.xml  wrong_input2.xml  wrong_input3.xml
tests/io/: FileUtils.cpp  FileUtils.h
tests/particles/: TestLinkedCellsContainer.cpp  TestParticleContainer.cpp
tests/physics/: TestGravitationalForce.cpp  TestLennardJonesForce.cpp
tests/simulation/: SimulationUtils.h  Test3BodyPeriodicSolution.cpp  TestRunInputFiles.cpp  (+3 more)
(+658 files in other folders)
